completing openapi spec
